work-on-cart-page

--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -6,4 +6,6 @@ COOKIE_EXPIRE =5
 SMPT_SERVICE ="gmail"
 SMPT_MAIL="acharyaprakash030@gmail.com"
 SMPT_PASSWORD="myhajeesfdaphqxp"
-
+CLOUDINARY_NAME:dk3g6bvp1
+CLOUDINARY_API_KEY:967926237726176
+CLOUDINARY_API_SECRET:DAjwNu_v3efNgIq8nXuLgS2R0U4
