--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@mui/icons-material": "^5.8.4",
-    "@mui/material": "^5.9.0",
-    "@mui/styles": "^5.9.0",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/data-grid": "^4.0.0-alpha.37",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -17,7 +18,8 @@
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.4.0",
-    "react-material-ui-carousel": "^3.4.2",
+    "react-js-pagination": "^3.0.3",
+    "react-material-ui-carousel": "^2.3.1",
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^5.2.0",
@@ -52,5 +54,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://192.168.10.101:4000"
+  "proxy": "http://localhost:4000"
 }
