--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,11 +1,11 @@
 PORT = 4000
 DB_URI = "mongodb://localhost:27017/Ecommerce"
-JWT_SECRET =ASDFZXCVJKLASDFQWERYUIO
+JWT_SECRET = #
 JWT_EXPIRE =5d
 COOKIE_EXPIRE =5
 SMPT_SERVICE ="gmail"
-SMPT_MAIL="acharyaprakash030@gmail.com"
-SMPT_PASSWORD="myhajeesfdaphqxp"
-CLOUDINARY_NAME:dk3g6bvp1
-CLOUDINARY_API_KEY:967926237726176
-CLOUDINARY_API_SECRET:DAjwNu_v3efNgIq8nXuLgS2R0U4
+SMPT_MAIL= #
+SMPT_PASSWORD= #
+CLOUDINARY_NAME = #
+CLOUDINARY_API_KEY = #
+CLOUDINARY_API_SECRET = #
